Update model architecture for predictions
+ pray nothing is too large

--- a/src/model.ipynb
+++ b/src/model.ipynb
@@ -674,6 +674,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.save_weights(\n",
+    "    '../streamlit_app/assets/models/ASL_DNN.weights.h5'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# model1.predict(np.expand_dims(X_val_pca[0], axis=0))"
    ]
   },
